# engebreth.com

./: .envrc  .flake8  .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CLAUDE.md  Makefile  README.md  app.py  cdk.json  jest.config.js  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: workflow.yml
.kiro/steering/: conventions.md  project.md
cdk/stacks/: engebreth_website_stack.py
config/: dev.yaml  prod.yaml
docs/: setup.md
engebreth_website/: engebreth_website_stack.py
functions/visitor_counter/: index.py
infra/constructs/: __init__.py  api.py  dns.py  site.py
lib/: types.ts
lib/constructs/: api.ts  dns.ts  github-oidc.ts  index.ts  site.ts
lib/stacks/: engebreth-website-stack.ts
src/funcs/visitor_counter/: index.py
src/functions/visitor_counter/: index.py
src/infra/constructs/: api.py  github_oidc.py
src/infra/stacks/: engebreth_website_stack.py
src/ui/: index.html  style.css
test/constructs/: api.test.ts  dns.test.ts  github-oidc.test.ts  site.test.ts
tests/unit/: test_UpdateCount.py  test_engebreth_website_stack.py
website/: .env.example  astro.config.mjs  package.json
website/public/: robots.txt
website/src/layouts/: Base.astro
website/src/pages/: 404.astro  index.astro  projects.astro  resume.astro
