[project]
name = "engebreth-website"
version = "0.1.0"
description = "Personal website infrastructure and backend"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
dev = [
    "boto3>=1.35",
    "moto[dynamodb]>=5.0",
    "pytest>=8.0",
    "ruff>=0.9",
    "pre-commit>=4.4",
]

[tool.ruff]
target-version = "py314"
line-length = 125

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "UP",   # pyupgrade
]
ignore = [
    "E401",  # multiple imports on one line
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # allow assert in tests

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
